<resources>
    <string name="app_name">Starbud</string>
    <string name="welcome_to_star">Welcome to Starbud\'s world</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="close">Close</string>
    <string name="paired_devices">Paired devices</string>
    <string name="available_devices">Available devices</string>
    <string name="switch_to_another_device">Switch to another device</string>
    <string name="star_battery_level">Starbud battery level</string>
    <string name="percentage_reserved_charge">%1$s of the reserved charge</string>
    <string name="connect_to_device">Connect to device</string>
    <string name="paired_bluetooth_device">paired bluetooth device</string>
    <string name="star_version">Starbud version</string>
    <string name="firmware_upgrade">Firmware upgrade</string>
    <string name="information">Information</string>
    <string name="about_this_app">About this app</string>
    <string name="help">Help</string>
    <string name="connected">Connected</string>
    <string name="low_battery_hint">The earphone battery is low. Please put the earphone into the charging box for charging.</string>
    <string name="auto_connected_hint">Your Starbud device has connected.</string>
    <string name="about_this_app_content">Wireless earphones\nWe present the first wireless Bluetooth earphones especially designed for sport and exercise with dual wireless design. With no wires for a tangle-free experience, the set comes with a charging box for storage， delivering extreme simplicity and convenience.</string>
    <string name="rename">Rename</string>
    <string name="audio_call">Audio call</string>
    <string name="media_audio">Media audio</string>
    <string name="cancel_paired">Cancel paired</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="empty_name_hint">The bluetooth\'s name should not be empty.</string>
    <string name="rename_failed">Rename failed</string>
    <string name="rename_hint">Please enter a new name</string>
    <string name="be_latest_version">The firmware is the latest version.</string>
    <string name="firmware_version">Firmware version</string>
    <string name="check_version">Check version</string>
    <string name="has_new_version">Has new version: %1$s</string>
    <string name="this_is_the_latest_version">This is the latest version.</string>
    <string name="getting_the_latest_version_info">Getting the latest version information.</string>
    <string name="file_provider_authorities" translatable="false">com.mobiistar.starbud.FileProvider</string>
    <string name="please_check_network">Please check the network.</string>
    <string name="next_step">Next step</string>
    <string name="release_date">Release date</string>
    <string name="upgrade_content">Upgrade content</string>
    <string name="if_upgraded">If upgraded, Please</string>
    <string name="skip">skip</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="fwu_instructions_content">Enter firmware upgrade mode:\n1. Please remove two earphones and put the %1$s earphone in the charging box separately. Wait until the indicator lights up.\n2. After the breathing lamp is lit and then extinguished, quickly click on the headset 5.\n3. Breathing lamp flashes 4 times, indicating successful entry into upgrade mode.\n4. If the breathing lamp flashing mode does not match the step 3, please remove the earphone.</string>
    <string name="tws_pairing">TWS pairing</string>
    <string name="please_follow_the_steps">Please follow the steps</string>
    <string name="tws_pairing_instructions">TWS pairing instructions:\nPut two earphones in the ear, then press the earphones long to match the TWS between earphones.</string>
    <string name="ota_search_please">Please search the earphone.</string>
    <string name="ota_searching">searching&#8230;</string>
    <string name="ota_search_failure">Search failed,please retry.</string>
    <string name="ota_earphone_fw_version">The earphone firmware version is V%1$d.</string>
    <string name="ota_upgrade">Upgrade</string>
    <string name="ota_upgrade_connecting">connecting&#8230;</string>
    <string name="ota_upgrade_upgrading">Upgrading&#8230;: %1$s</string>
    <string name="ota_upgrade_failure">Upgrade failed,please retry.</string>
    <string name="ota_upgrade_success">Upgrade success</string>
    <string name="ota_upgrade_statistic">The upgrade takes %1$d minutes.</string>
    <string name="ota_error_toast">An error occurred. Please try again.</string>
    <string name="ota_charge_retry">Please ensure that the earphone has power. If you could not ensure that, please charge the earphone for ten minutes, then retry.</string>
    <string name="new_version_info">New version info</string>
    <string name="checking_version">Checking version</string>
    <string name="download_progress">Download progress</string>
    <string name="download_failed">Download failed</string>
    <string name="please_connect_device">Please connect the earphone to get its product mode.</string>

</resources>
