<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.about.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_188dp"
            android:layout_height="@dimen/_146dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_3dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/star_icon_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/about_this_app"
            android:textColor="@color/colorGrey1B"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_19dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:text="@string/about_this_app_content"
            android:textColor="@color/colorGrey53"
            android:textSize="@dimen/_12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_10dp"
        android:gravity="center"
        android:onClick="onCloseClick"
        android:padding="@dimen/_18dp"
        android:text="@string/close"
        android:textColor="@color/text_color_close"
        android:textSize="@dimen/_20sp" />
</FrameLayout>