<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.version.VersionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_188dp"
            android:layout_height="@dimen/_146dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_3dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/star_icon_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_7dp"
            android:text="@string/star_version"
            android:textColor="@color/colorGrey1B"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_23sp" />

        <TextView
            android:id="@+id/tv_check_version"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/ic_button_bg"
            android:gravity="center"
            android:onClick="onCheckVersionClick"
            android:text="@string/check_version"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/_10dp"
        android:gravity="center"
        android:onClick="onCloseClick"
        android:padding="@dimen/_18dp"
        android:text="@string/close"
        android:textColor="@color/text_color_close"
        android:textSize="@dimen/_20sp" />
</FrameLayout>