<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.activity.firmware.BaseOtaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tv_next_step"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_188dp"
            android:layout_height="@dimen/_146dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_3dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/star_icon_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8dp"
            android:text="@string/firmware_upgrade"
            android:textColor="@color/colorGrey1B"
            android:textSize="@dimen/_18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_19dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:text="@string/firmware_version"
            android:textColor="@color/colorGrey53"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:text="@string/firmware_version"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:text="@string/release_date"
            android:textColor="@color/colorGrey53"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:text="@string/release_date"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_35dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/upgrade_content"
            android:textColor="@color/colorGrey53"
            android:textSize="@dimen/_12sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_update_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35dp"
                android:layout_marginEnd="@dimen/_35dp"
                android:paddingBottom="@dimen/_6dp"
                android:text="@string/upgrade_content"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12sp" />
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10dp"
        android:gravity="center"
        android:onClick="onNextStepClick"
        android:padding="@dimen/_18dp"
        android:text="@string/next_step"
        android:textColor="@color/text_color_close"
        android:textSize="@dimen/_20sp" />
</RelativeLayout>